fix payment card
