# server/api/models/paymentModel.js
@@ -4,17 +4,17 @@ const Schema = mongoose.Schema;
 
 const paymentCardModel = new Schema({
     userId: {type: Schema.Types.ObjectId, ref: 'user'},
-    cardType: {type: String, enum: ['Master Card', 'Visa']},
+    cardType: {type: String, enum: ['Master Card', 'Visa'], required: true},
     nameOnCard:{type: String, required: true},
     cardNumber: {type: Number, required: true},
     expiredDate: {type: Date, required: true},
     remarks: {type: String},
 
     //billing address
-    residentialAddress:{type: String, required: true},
-    cityAddress:{type: String, required: true},
-    province:{type: String, required: true},
-    country:{type: String, required: true},
+    residentialAddress:{type: String},
+    city:{type: String},
+    province:{type: String},
+    country:{type: String},
     postalCode:{type: String}
 },{
     timestamps: true
